[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["Eric Chubb"]
license = "MIT"
description = "A modern Windows Registry editor with SQLite caching"
repository = "https://github.com/YOUR_USERNAME/hive"

[dependencies]
# TODO: Update with your GitHub username once the repo is created
# rust-hive = { git = "https://github.com/YOUR_USERNAME/rust-hive" }
# For now, use local path during development:
rust-hive = { path = "../rust-hive" }
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = "0.31"
rfd = "0.15"
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
] }

# Build with windows subsystem to avoid console window
[profile.release]
opt-level = 3
lto = true
