[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["Eric Chubb"]
license = "MIT"
description = "A modern Windows Registry editor with SQLite caching"
repository = "https://github.com/ericcdub/hive"

[dependencies]
# Use local path during development, switch to git for release
rust-hive = { path = "../rust-hive" }
# rust-hive = { git = "https://github.com/ericcdub/rust-hive" }
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = "0.31"
rfd = "0.15"
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
] }

# Build with windows subsystem to avoid console window
[profile.release]
opt-level = 3
lto = true
